# worldconv

./: .gitignore  README.md  pyproject.toml  requirements.txt  tox.ini  uuidworldconverter.py
.github/workflows/: release.yml  test.yml
config/: config.yml
utils/: converter.py  modify.py  player.py  uuid.py
uuidworldconverter/: __main__.py  cli_entry.py
uuidworldconverter/core/: config.py  converter.py  modify.py
uuidworldconverter/utils/: logger.py  uuid.py
worldconv/: __main__.py
worldconv/utils/: config.py  logger.py  uuid.py
